# eml2text

./: .gitignore  README.md  eml2text  eml2text.py  pyproject.toml
src/eml2text/: cli.py
